src/components/pages/PagesButton.css
.styled--button{
  background-color: #ffff;
  color: #000;
  padding: 10px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 20px;
  margin: 10px 10px;
  cursor: pointer;
  border-radius: 2px;
  border: none;
}

.styled--p--about{
  text-indent: 20px;
  text-decoration: none;
  display: inline-block;
  word-break: keep-all;
  width: 400px;
  text-align: left;
  margin-top: 10px;
}

